# bulletdb

./: Cargo.toml  README.md
src/: lib.rs  main.rs  route_get.rs  route_set.rs  tests.rs
src/tests/: mod.rs  route_get.rs  route_set.rs  route_set_subpaths.rs
src/tests/route_get/: default_case.rs
src/tests/route_set/: default_case.rs  subpaths_case.rs
src/tests/test_route_get/: default_case.rs
src/tests/test_route_set/: default_case.rs  subpaths_case.rs
