[package]
name = "bulletdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
indexmap = { version = "2.2.5", features = ["serde"] }
reqwest = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }

[lib]
path = "src/lib.rs"
